--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
         ]
     },
     "devDependencies": {
+        "@commitlint/cli": "8.3.5",
+        "@commitlint/config-conventional": "8.3.4",
         "@typescript-eslint/eslint-plugin": "2.31.0",
         "@typescript-eslint/parser": "2.31.0",
+        "cz-conventional-changelog": "^3.2.0",
         "eslint-config-prettier": "6.11.0",
         "eslint-plugin-prettier": "3.1.3",
         "eslint-plugin-react": "7.19.0",
@@ -50,6 +53,7 @@
     },
     "husky": {
         "hooks": {
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
             "pre-commit": "lint-staged",
             "pre-push": "yarn test"
         }
@@ -67,5 +71,10 @@
             "!src/setupTests.js",
             "!src/custom.d.ts"
         ]
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
