--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "test": "react-scripts test --verbose --watchAll=false",
         "test:watch": "react-scripts test --verbose",
         "eject": "react-scripts eject",
-        "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+        "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
     },
     "eslintConfig": {
         "extends": "react-app"
