--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1",
+        "react-select": "3.1.0",
         "styled-components": "5.1.0",
         "typescript": "~3.8.3"
     },
@@ -45,6 +46,7 @@
     "devDependencies": {
         "@commitlint/cli": "8.3.5",
         "@commitlint/config-conventional": "8.3.4",
+        "@types/react-select": "3.0.12",
         "@typescript-eslint/eslint-plugin": "2.31.0",
         "@typescript-eslint/parser": "2.31.0",
         "cz-conventional-changelog": "^3.2.0",
