--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react-router-dom": "5.2.0",
         "react-scripts": "3.4.1",
         "react-select": "3.1.0",
+        "react-spinners": "0.8.3",
         "styled-components": "5.1.0",
         "typescript": "~3.9.2"
     },
