--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test --verbose --watchAll=false",
-        "test:watch": "react-scripts test --verbose",
+        "test": "react-scripts test --verbose --watchAll=false --env=jest-environment-jsdom-sixteen",
+        "test:watch": "react-scripts test --verbose --env=jest-environment-jsdom-sixteen",
         "eject": "react-scripts eject",
         "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
     },
@@ -57,6 +57,7 @@
         "eslint-plugin-prettier": "3.1.3",
         "eslint-plugin-react": "7.20.0",
         "husky": "4.2.5",
+        "jest-environment-jsdom-sixteen": "1.0.3",
         "lint-staged": "10.2.2",
         "prettier": "2.0.5"
     },
